feat: update date fields to use LocalDateTime for improved time precision